keep a minimal pledge of "stdio recvfd ..."
- lose the "inet" pledge in AXFR, TCP.
- adjust ratelimit for the ttl that hits us, in order to evade DoS attacks
  on valid nameservers.
- add a version output in dddctl, also add a tsig output for creating 32 byte
  random tsig keys.
- AXFR transfers are fixed to require TSIG records when configured to use them
  This fixes a MITM/security problem.


[2022] Changes in RELEASE_1_7 from RELEASE_1_6

- a selectable forwarding strategy between "single" and "spray" pertaining
 to the entered forwarders.  (experimental).
- added a non-documented "dddctl dumpcache" for debugging the expiring of
  names.
- added RFC 7043 (EUI48 and EUI64) support
- fixed NAPTR and SRV (in regular and ANY replies) to NOT compress names in
  their rdata (as per RFC)
- shared memory in delphinusdnsd now has a guard page between each slot, if
  this region of memory gets used delphinusdnsd will segment violate and a
  possible attack is foiled.  The detriment is a higher memory footprint,
  but we can't do without this now that it's in.
- axfrport has been moved to options syntax is ie. "axfrport 10053;"
- strictaxfr only allows authenticated AXFR's and is an option ie. "strictaxfr;"
- config file changes dropping the "label" after options, tsig, passlist, etc.. 
- by default dddctl query now uses cookies (it does not cross check these) and
  if they aren't wanted they can be turned off with -N flag.
- added HTTPS and SVCB support (still in draft, standard hopefully in november 2022)
- added KX RR support (RFC 2230)
- added IPSECKEY RR support (RFC 4025)
- fixed delegation points according to RFC 4035 section 2.2 regarding NS RR's
  This was a long standing bug but noone noticed since we don't delegate much
  with delphinusdnsd.
- a hardcoded TCP TIMEOUT of 420 seconds when EDNS option 11 was requested
  this is experimental still...

[2021] Changes in RELEASE_1_6 from RELEASE_1_5

- rdomain support in OpenBSD