@@ -18,6 +18,7 @@ keep a minimal pledge of "stdio recvfd ..."
   random tsig keys.
 - AXFR transfers are fixed to require TSIG records when configured to use them
   This fixes a MITM/security problem.
+- implemented algorithm 14 (ECDSAP384SHA384) and algorithm 15 (Ed25519)
 
 
 [2022] Changes in RELEASE_1_7 from RELEASE_1_6
